--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.2.0",
     "eslint": "^8.28.0",
+    "react-router-dom": "^6.5.0",
     "typescript": "^4.6.4",
     "vite": "^3.2.3"
   }
